[package]
name = "webauthn-rs-core"
version = "0.5.0-dev"
authors = ["William Brown <william@blackhats.net.au>"]
edition = "2021"
rust-version = "1.70.0"
description = "Webauthn Cryptographic Operation Handling"
repository = "https://github.com/kanidm/webauthn-rs"
readme = "README.md"
keywords = ["webauthn", "authentication"]
categories = ["authentication", "web-programming"]
license = "MPL-2.0"

[features]
default = []

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
base64.workspace = true
base64urlsafedata.workspace = true
webauthn-attestation-ca.workspace = true
webauthn-rs-proto.workspace = true
serde.workspace = true
serde_cbor_2.workspace = true
serde_json.workspace = true
nom.workspace = true
thiserror.workspace = true
tracing.workspace = true
openssl.workspace = true
# We could consider replacing this with openssl rand.
rand.workspace = true
url = { workspace = true, features = ["serde"] }
x509-parser = "0.13.0"
der-parser = "7.0.0"
compact_jwt.workspace = true
uuid = { workspace = true, features = ["serde"] }
p256 = { version = "0.13.2" } #, features = ["serde"] }
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
indexmap = { version = "2.0.2", features = ["serde"] }

[dev-dependencies]
hex-literal = "0.3"
generic-array = { version = "0.14.7" }
tracing-subscriber.workspace = true
webauthn-rs-device-catalog.workspace = true
